--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".WebActivity">
+
     <include layout="@layout/toolbar"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:id="@+id/toolbar"/>
     <FrameLayout
         android:id="@+id/fl_wrapper"
         android:layout_below="@+id/toolbar"
         android:layout_width="match_parent"
+        android:layout_above="@+id/bottom_navigation"
         android:layout_height="match_parent">
+        <WebView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/webView"/>
+        <ProgressBar
+            android:id="@+id/loadingBar"
+            android:layout_width="fill_parent"
+            android:layout_height="5dp"
+            android:visibility="visible"
+            android:layout_gravity="top"
+            android:progressDrawable="@drawable/custom_progress_bar"
+            style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
     </FrameLayout>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
@@ -33,8 +47,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="10dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         android:layout_marginBottom="20dp"
         android:contentDescription="hihi" />
-
 </RelativeLayout>
